== 0.7.1 Fancy Pants release
 * Require EventMachine 0.11. Until it's released, install from:
   gem install eventmachine --source http://code.macournoyer.com
 * Ruby 1.8.5 compatibility, closes #49 [Wincent Colaiuta]
 * Move all EventMachine stuff out of Server, you can now create a Thin Backend that
   does not depend on EventMachine.
 * Rename Connector to Backend. Extend Thin::Backends::Base to implement your own.
 * Fix high memory usage with big POST body, fixes #48

== 0.7.0 Spherical Cow release
 * Add --max-persistent-conns option to sets the maximum number of persistent connections.
   Set to 0 to disable Keep-Alive.
 * INT signal now force stop and QUIT signal gracefully stops.
 * Warn when descriptors table size can't be set as high as expected.
 * Eval Rackup config file using top level bindings.
 * Remove daemons gem dependency on Windows plateform, fixes #45.
 * Change default timeout from 60 to 30 seconds.
 * Add --max-conns option to sets the maximum number of file or socket descriptors that
   your process may open, defaults to 1024.
 * Tail logfile when stopping and restarting a demonized server, fixes #26.
 * Wrap application in a Rack::CommonLogger adapter in debug mode.
 * --debug (-D) option no longer set $DEBUG so logging will be less verbose
   and Ruby won't be too strict, fixes #36.
 * Deprecate Server#silent in favour of Logging.silent.
 * Persistent connection (keep-alive) support.
 * Fix -s option not being included in generated config file, fixes #37.
 * Add Swiftiply support. Use w/ the --swiftiply (-y) option in the thin script,
   closes #28 [Alex MacCaw]

== 0.6.4 Sexy Lobster release
 * Fix error when stopping server on UNIX domain socket, fixes #42
 * Rescue errors in Connection#get_peername more gracefully, setting REMOTE_ADDR to nil, fixes #43

== 0.6.3 Ninja Cookie release
 * Add tasks for Vlad the Deployer in example/vlad.rake [cnantais]
 * Add Ramaze Rackup config file in example dir [tmm1]